# french-suited-playing-cards

./: Cargo.toml  README.md
src/: card.rs  deck.rs  lib.rs
src/card/: color.rs  rank.rs  suit.rs
src/deck/: deck_type.rs  decktype.rs
